# Lehran-Engine

./: .gitignore  README.md  main.py  quick_build.ps1
Projects/Sundered Testament/: Sundered Testament.lehran
engine/: BUILD_README.md  CMakeLists.txt  README.md  build_engine.ps1  config.ini  main.cpp  setup_sdl.ps1
engine/include/: ConfigManager.hpp  DialogueSystem.hpp  GameStateManager.hpp  InputHandler.hpp  MapManager.hpp  README.md  RenderManager.hpp  SaveManager.hpp  SaveSlotScreen.hpp  SceneManager.hpp  TextureManager.hpp
engine/src/: ConfigManager.cpp  DialogueSystem.cpp  GameStateManager.cpp  InputHandler.cpp  MapManager.cpp  RenderManager.cpp  SaveManager.cpp  SaveSlotScreen.cpp  SceneManager.cpp  TextureManager.cpp
gui/: __init__.py  asset_manager.py  build_manager.py  gameplay_editor.py  main_window.py  map_editor.py  project_manager.py  settings_manager.py  story_editor.py  theme_manager.py  timeline_editor.py
settings/: preferences.json
